# yadro_test_task

./: CMakeLists.txt  README.md  config.txt
SorterExe/: CMakeLists.txt  main.cpp
Tape/: CMakeLists.txt
Tape/inc/: Macro.h  Tape.h  TapeImpl.h  TapeSort.h
Tape/src/: Tape.cpp  TapeSort.cpp
test_files/: InTapeTest_many_1.bin_TXT_VERSION.txt  InTapeTest_many_2.bin_TXT_VERSION.txt  OUT.bin_TXT_VERSION.txt
tests/: CMakeLists.txt  main.cpp
